--- a/client/public/index.html
+++ b/client/public/index.html
@@ -8,7 +8,7 @@
       content="Web site created using create-react-app"
     />
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0:500;0,700;0:900;1,500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0:500;0,700;0:900;1,500&display=swap">
     <title>FireSocial</title>
     <link rel="stylesheet" href="style.css">
   </head>
